--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,19 @@
 <app-header></app-header>
 
 <app-hello-world></app-hello-world>
+
+<form class="ui large form segment">
+  <h3 class="ui header">Add a link</h3>
+  <div>
+      <label for="title">Title:</label>
+      <input name="title">
+  </div>
+  <div class="field">
+        <label for="link">Link:</label>
+        <input name="link">
+  </div>
+</form>
+
 <app-user-list></app-user-list>
 
 <app-footer></app-footer>
