Switch to scss style

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-header></app-header>
-
+<app-login></app-login>
 <app-hello-world></app-hello-world>
 
 <form class="ui large form segment">
