--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,22 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-header></app-header>
 <app-login></app-login>
-<app-hello-world></app-hello-world>
 
 <form class="ui large form segment">
   <h3 class="ui header">Add a link</h3>
   <div>
       <label for="title">Title:</label>
-      <input name="title">
+      <input name="title" #newtitle>
   </div>
   <div class="field">
         <label for="link">Link:</label>
-        <input name="link">
+        <input name="link" #newlink>
   </div>
+  <!-- added button for action -->
+  <button (click)="addAgency( newtitle, newlink )"
+          class="ui positive right floated button">
+   Submit link
+  </button>
 </form>
 
 <app-user-list></app-user-list>
