--- a/src/app/agency-row/agency-row.component.html
+++ b/src/app/agency-row/agency-row.component.html
@@ -1,3 +1,4 @@
+<div [style.background-color]="'white'">
 <agency-logo [logo]='agency.logoUrl'></agency-logo>
 <div class="content">
   <div class="header"> {{ agency.name }}</div>
@@ -8,5 +9,5 @@
     <agency-category [agency]="agency" ></agency-category>
   </div>
 </div>
-
 <agency-rating [rating]="agency.rating"></agency-rating>
+</div>
