--- a/src/app/itm-app.component.html
+++ b/src/app/itm-app.component.html
@@ -43,4 +43,6 @@
     Welcome: {{ userName }}!
   </p>
   <button (click)="signIn()" class="ui button">Sign in</button>
+  <div *ngIf="loading">loading...</div>
+  <pre> {{ data | json}}</pre>
 </div>
